Fix hero gap

--- a/app/components/hero.module.scss
+++ b/app/components/hero.module.scss
@@ -19,7 +19,7 @@
 
   &__video {
     position: absolute;
-    top: 88px;
+    top: 82px;
     left: 0;
     width: 100%;
     height: 310px;
@@ -44,7 +44,7 @@
     text-align: center;
 
     color: white;
-
+    
     z-index: 2;
 
     @media screen and (min-width: 720px) {
