--- a/app/global.scss
+++ b/app/global.scss
@@ -10,11 +10,6 @@ html {
 
 // START GLOBAL STYLES ********
 
-.main-layout {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
 
 .content-wrapper {
   flex: 1;
